# customer-support-rl-env

./: Dockerfile  JUDGE_READY_CHECKLIST.md  README.md  agent_memory.json  dashboard.html  grpo_rewards.json  grpo_train.py  inference.py  inference.py.save  main.py  memory.py  openenv.yaml  orchestrator.py  pyproject.toml  requirements.txt  smoke_test.py  training_loop.py  trl_training_example.py
agents/: critic_agent.py  escalation_agent.py  qa_agent.py  research_agent.py  resolver_agent.py  triage_agent.py
app/: database.py  env.py  models.py  policy.py
checkpoints_grpo/ep_0010/: metadata.json
checkpoints_grpo/ep_0020/: metadata.json
server/: app.py
