[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-rl-env"
version = "1.0.0"
description = "Customer Support RL Environment - OpenEnv Hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=2.7.2",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
    "sentence-transformers>=2.7.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
